Refactor pair reduction benchmark